# cyberfabric-core

./: .codacy.yml  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  MAINTAINERS.md  Makefile  README.md  SECURITY.md  dylint.toml  release-plz.toml
apps/gts-docs-validator/: Cargo.toml
dylint_lints/de13_common_patterns/de1302_error_from_to_string/: Cargo.toml
dylint_lints/de13_common_patterns/de1302_error_from_to_string/src/: lib.rs
dylint_lints/de13_common_patterns/de1302_error_from_to_string/ui/: bad_closure_to_string.rs  bad_closure_to_string.stderr  bad_from_to_string.stderr  bad_generic_error_bound.rs  bad_generic_error_bound.stderr  bad_macro_rules.rs  bad_macro_rules.stderr  bad_tryfrom_assoc_error.rs  bad_tryfrom_assoc_error.stderr  bad_tryfrom_to_string.rs  bad_tryfrom_to_string.stderr  bad_ufcs_to_string.rs  bad_ufcs_to_string.stderr  good_from_preserve.rs  good_from_u32.rs  good_macro_expansion.rs  good_unrelated_error.rs
examples/modkit/users-info/users-info-sdk/: Cargo.toml
examples/modkit/users-info/users-info-sdk/src/: client.rs  lib.rs
libs/modkit-auth/: Cargo.toml
libs/modkit-auth/examples/: oauth2_config.rs
libs/modkit-auth/src/: claims_error.rs  validation.rs
libs/modkit-auth/src/oauth2/: config.rs  fetch.rs  source.rs
libs/modkit-auth/src/providers/: jwks.rs
libs/modkit-canonical-errors/: Cargo.toml  README.md
libs/modkit-canonical-errors-macro/: Cargo.toml
libs/modkit-canonical-errors-macro/src/: lib.rs
libs/modkit-canonical-errors/src/: builder.rs  context.rs  error.rs  lib.rs  problem.rs
libs/modkit-canonical-errors/tests/: context.rs  error.rs  problem.rs  resource_error_macro.rs  showcase.rs  ui.rs
libs/modkit-canonical-errors/tests/ui/: missing_field_violation_on_invalid_argument.rs  missing_field_violation_on_invalid_argument.stderr  missing_precondition_violation_on_failed_precondition.rs  missing_precondition_violation_on_failed_precondition.stderr  missing_quota_violation_on_resource_exhausted.rs  missing_quota_violation_on_resource_exhausted.stderr  missing_reason_on_aborted.rs  missing_reason_on_aborted.stderr  missing_reason_on_out_of_range.rs  missing_reason_on_out_of_range.stderr  missing_reason_on_permission_denied.rs  missing_reason_on_permission_denied.stderr  missing_reason_on_unauthenticated.rs  missing_reason_on_unauthenticated.stderr  missing_resource_on_not_found.rs  missing_resource_on_not_found.stderr  retry_after_only_on_service_unavailable.rs  retry_after_only_on_service_unavailable.stderr
libs/modkit-db-macros/: Cargo.toml
libs/modkit-errors-macro/: Cargo.toml
libs/modkit-http/: Cargo.toml
libs/modkit-http/src/: builder.rs  client.rs  config.rs  response.rs  tls.rs
libs/modkit-http/src/layers/: otel.rs  retry.rs
libs/modkit-macros/: Cargo.toml
libs/modkit-node-info/: Cargo.toml
libs/modkit-node-info/src/: error.rs  sysinfo_collector.rs
libs/modkit-odata/: Cargo.toml
libs/modkit-odata-macros/: Cargo.toml
libs/modkit-odata/src/: filter.rs  odata_parse.rs  odata_parse_tests.rs  page.rs  problem_mapping.rs
libs/modkit-sdk/: Cargo.toml
libs/modkit-transport-grpc/: Cargo.toml
libs/modkit-transport-grpc/src/: backoff.rs  client.rs  lib.rs  rpc_retry.rs
libs/modkit-utils/: Cargo.toml
libs/modkit-utils/src/: humantime_serde_tests.rs  secret_string.rs  var_expand.rs
modules/system/resource-group/resource-group/: Cargo.toml
modules/system/resource-group/resource-group-sdk/: Cargo.toml
modules/system/resource-group/resource-group-sdk/src/: api.rs  error.rs  gts.rs  lib.rs  models.rs  models_tests.rs
modules/system/resource-group/resource-group/src/: lib.rs
modules/system/types/: Cargo.toml
modules/system/types-sdk/: Cargo.toml
tools/dylint_lints/de01_contract_layer/de0101_no_serde_in_contract/: Cargo.toml  README.md
tools/dylint_lints/de01_contract_layer/de0101_no_serde_in_contract/src/: lib.rs
tools/dylint_lints/de01_contract_layer/de0101_no_serde_in_contract/ui/: deserialize.rs  deserialize.stderr  no_serde_derive.rs  qualified_paths.rs  qualified_paths.stderr  serialize.rs  serialize.stderr  serialize_deserialize.rs  serialize_deserialize.stderr
tools/dylint_lints/de01_contract_layer/de0102_no_toschema_in_contract/: Cargo.toml  README.md
tools/dylint_lints/de01_contract_layer/de0102_no_toschema_in_contract/src/: lib.rs
tools/dylint_lints/de01_contract_layer/de0102_no_toschema_in_contract/ui/: mixed_derives.rs  mixed_derives.stderr  no_toschema_derive.rs  toschema.rs  toschema.stderr
tools/dylint_lints/de01_contract_layer/de0103_no_http_types_in_contract/: Cargo.toml  README.md
tools/dylint_lints/de01_contract_layer/de0103_no_http_types_in_contract/src/: lib.rs
tools/dylint_lints/de01_contract_layer/de0103_no_http_types_in_contract/ui/: http_imports.rs  http_imports.stderr  mixed_imports.rs  mixed_imports.stderr  no_http_imports.rs
tools/dylint_lints/de01_contract_layer/de0104_no_api_dto_in_contract/: Cargo.toml  README.md
tools/dylint_lints/de01_contract_layer/de0104_no_api_dto_in_contract/src/: lib.rs
tools/dylint_lints/de01_contract_layer/de0104_no_api_dto_in_contract/ui/: with_api_dto.rs  with_api_dto.stderr  without_api_dto.rs
tools/dylint_lints/de02_api_layer/de0201_dtos_only_in_api_rest/: Cargo.toml  README.md
tools/dylint_lints/de02_api_layer/de0201_dtos_only_in_api_rest/src/: lib.rs
tools/dylint_lints/de02_api_layer/de0201_dtos_only_in_api_rest/ui/: dto_in_api_rest.rs  dto_in_domain.rs  dto_in_domain.stderr
tools/dylint_lints/de02_api_layer/de0202_dtos_not_referenced_outside_api/: Cargo.toml  README.md
tools/dylint_lints/de02_api_layer/de0202_dtos_not_referenced_outside_api/src/: lib.rs
tools/dylint_lints/de02_api_layer/de0203_dtos_must_use_api_dto/: Cargo.toml  README.md
tools/dylint_lints/de02_api_layer/de0204_dtos_must_have_toschema_derive/: Cargo.toml  README.md
tools/dylint_lints/lint_utils/: Cargo.toml
tools/dylint_lints/lint_utils/src/: lib.rs
tools/fuzz/: .gitignore  Cargo.toml  README.md
tools/fuzz/fuzz_targets/: fuzz_odata_cursor.rs  fuzz_odata_filter.rs  fuzz_odata_orderby.rs
(+1002 files in other folders)
