[package]
name = "gts-docs-validator"
version = "0.6.1"
publish = false
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "GTS identifier validator for documentation files (DE0903)"

[[bin]]
name = "gts-docs-validator"
path = "src/main.rs"

[dependencies]
# CLI parsing
clap = { workspace = true }

# GTS validator library (core logic)
gts-validator = { workspace = true }

[lints]
workspace = true
