[package]
name = "cf-modkit-auth"
version = "0.6.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit authentication library"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["development-tools"]

[lib]
name = "modkit_auth"

[lints]
workspace = true

[dependencies]
# Core dependencies
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
time = { workspace = true }
arc-swap = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
tower = { workspace = true }
http = { workspace = true }
modkit-security = { workspace = true }

# HTTP client
modkit-http = { workspace = true }
url = { workspace = true }

# OAuth2 token lifecycle
aliri_tokens = { workspace = true }
aliri_clock = { workspace = true }
base64 = { workspace = true }

# Shared utilities
modkit-utils = { workspace = true }
zeroize = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
http-body-util = { workspace = true }
httpmock = { workspace = true }
