[package]
name = "cf-modkit-canonical-errors-macro"
version = "0.6.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit canonical errors proc-macro"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true
name = "modkit_canonical_errors_macro"

[lints]
workspace = true

[dependencies]
proc-macro-crate = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
