[package]
name = "cf-modkit-db-macros"
version = "0.6.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Proc-macro derives for modkit-db secure ORM layer"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true
name = "modkit_db_macros"

[lints]
workspace = true

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
heck = { workspace = true }
proc-macro-error2 = { workspace = true }

[dev-dependencies]
trybuild = "1"
