[package]
name = "cf-modkit-macros"
version = "0.6.2"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit macros"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true
name = "modkit_macros"

[lints]
workspace = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }
heck = { workspace = true }
strsim = { workspace = true }
