[package]
name = "cf-modkit-odata"
version = "0.7.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit OData library"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["web-programming"]

[lib]
name = "modkit_odata"

[lints]
workspace = true

[features]
with-utoipa = ["dep:utoipa"]

[dependencies]
modkit-errors = { workspace = true }
modkit-errors-macro = { workspace = true }
bigdecimal = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["clock"] }
peg = { workspace = true }
chrono-tz = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
thiserror = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
utoipa = { workspace = true, optional = true }
http = { workspace = true }
