[package]
name = "cf-modkit-sdk"
version = "0.6.3"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit SDK"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["development-tools"]

[lib]
name = "modkit_sdk"

[lints]
workspace = true

[features]
default = []
derive = ["dep:modkit-odata-macros"]
chrono = ["dep:chrono"]

[dependencies]
# Project-local crates
modkit-security = { workspace = true }
modkit-odata = { workspace = true }
modkit-odata-macros = { workspace = true, optional = true }

# Core deps
futures-core = { workspace = true }
pin-project-lite = { workspace = true }

# Optional feature dependencies
uuid = { workspace = true, features = ["v7"], optional = true }
chrono = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
futures-util = { workspace = true }
uuid = { workspace = true, features = ["v7"] }
chrono = { workspace = true }
