[package]
name = "cf-modkit-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "ModKit utils library"
readme = "README.md"
keywords = ["cyberfabric", "cyberfabric-modkit"]
categories = ["development-tools"]

[lib]
name = "modkit_utils"

[lints]
workspace = true

[features]
serde = ["dep:serde"]
humantime-serde = ["serde", "dep:humantime"]

[dependencies]
serde = { workspace = true, optional = true }
humantime = { workspace = true, optional = true }
zeroize = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
