[package]
name = "de0103_no_http_types_in_contract"
version = "0.1.0"
authors = ["Cyber Fabric"]
description = "Contract modules should not reference HTTP types (DE0103)"
edition.workspace = true
publish = false

[lib]
crate-type = ["cdylib"]

[[example]]
name = "http_imports"
path = "ui/http_imports.rs"

[[example]]
name = "no_http_imports"
path = "ui/no_http_imports.rs"

[[example]]
name = "mixed_imports"
path = "ui/mixed_imports.rs"

[dependencies]
clippy_utils.workspace = true
dylint_linting.workspace = true
lint_utils.workspace = true

[dev-dependencies]
dylint_testing.workspace = true
http = "1.0"
axum = "0.7"

[package.metadata.rust-analyzer]
rustc_private = true
