[package]
name = "de0204_dtos_must_have_toschema_derive"
version = "0.1.0"
authors = ["Cyber Fabric"]
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[[example]]
name = "missing_toschema"
path = "ui/missing_toschema.rs"

[[example]]
name = "has_toschema"
path = "ui/has_toschema.rs"

[dependencies]
clippy_utils.workspace = true
dylint_linting.workspace = true
lint_utils.workspace = true

[dev-dependencies]
dylint_testing.workspace = true
serde.workspace = true
utoipa = "5.2.0"

[package.metadata.rust-analyzer]
rustc_private = true
